 0.01  2017-08-08

       Start on initial version

 0.02  2017-08-08 -

       Improve POD

       A grid minimally consists of one vertical and one
       horizontal line