@@ -1,7 +1,7 @@
 use strict;
 use warnings;
 
-use Test::Simple tests => 277;
+use Test::Simple tests => 296;
 use Test::More;
 use Test::Exception;
 use Test::Files;
@@ -16,8 +16,26 @@ my $gl = Grid::Layout->new();                    isa_ok($gl        , 'Grid::Layo
 
 is(ref($gl->{V}{tracks}), 'ARRAY', '$gl->{V}{tracks} is an array reference');
 is(ref($gl->{H}{tracks}), 'ARRAY', '$gl->{V}{tracks} is an array reference');
-# is_deeply($gl->{V}{tracks}, [], '$gl->{V}{tracks} is an array reference');
-# is_deeply($gl->{H}{tracks}, [], '$gl->{H}{tracks} is an array reference');
+is(ref($gl->{V}{lines }), 'ARRAY', '$gl->{V}{tracks} is an array reference');
+is(ref($gl->{H}{lines }), 'ARRAY', '$gl->{V}{tracks} is an array reference');
+
+my $v_line_0 = $gl->get_vertical_line  (0);
+my $h_line_0 = $gl->get_horizontal_line(0);
+
+isa_ok($v_line_0, 'Grid::Layout::Line');
+isa_ok($h_line_0, 'Grid::Layout::Line');
+is($v_line_0->{position}, 0);
+is($h_line_0->{position}, 0);
+isnt($v_line_0, $h_line_0);
+
+throws_ok { $v_line_0->_previous_track } qr{Cannot return previous track. I am line zero};
+throws_ok { $h_line_0->_previous_track } qr{Cannot return previous track. I am line zero};
+
+throws_ok { $v_line_0->_next_track     } qr{Cannot return next track. I am last line};
+throws_ok { $h_line_0->_next_track     } qr{Cannot return next track. I am last line};
+
+is($v_line_0, $gl->line_x(0));
+is($h_line_0, $gl->line_y(0));
 
 my @size = $gl->size();
 
@@ -28,12 +46,18 @@ my $cell;
 $cell = $gl->cell(0, 0);
 is($cell, undef, 'cell 0.0 is undefined');
 
-is(scalar @{$gl->{V}->{lines}}, 1, '1 vertical lines after creation');
-is(scalar @{$gl->{H}->{lines}}, 1, '1 horizontal lines after creation');
+is(scalar @{$gl->{V}->{lines }}, 1, '1 vertical   tracks after creation');
+is(scalar @{$gl->{H}->{lines }}, 1, '1 horizontal tracks after creation');
+
+is(scalar @{$gl->{V}->{tracks}}, 0, '0 vertical   tracks after creation');
+is(scalar @{$gl->{H}->{tracks}}, 0, '0 horizontal tracks after creation');
 
 # Add 4 horizontal and 3 vertical tracks:
-my $track_h_A    = $gl->add_horizontal_track();
+my ($track_h_A,
+    $line_h_A)   = $gl->add_horizontal_track();
+
                  isa_ok($track_h_A   , 'Grid::Layout::Track', '$track_h_A is a Grid::Layout::Track');
+                 isa_ok($line_h_A    , 'Grid::Layout::Line');
                  is($gl->size_x, 0, 'gl size_x is 1');
                  is($gl->size_y, 1, 'gl size_y is 0');
                  @size=$gl->size(); is_deeply(\@size, [0, 1], 'Size is 0x1');
@@ -41,6 +65,7 @@ my $track_h_A    = $gl->add_horizontal_track();
                  is(scalar @{$gl->{V}->{lines}}, 1, '1 vertical lines');
                  is(scalar @{$gl->{H}->{lines}}, 2, '2 horizontal lines');
                  is($track_h_A->{position}, 0, '$track_h_A->{position} == 0');
+                 is($line_h_A, $gl->line_y(1));
 my $track_h_B    = $gl->add_horizontal_track();
                  isa_ok($track_h_B, 'Grid::Layout::Track', '$track_h_B is a Grid::Layout::Track');
                  is($gl->size_x, 0, 'gl size_x is 2');
@@ -59,6 +84,9 @@ my ($track_h_C,
                  $cell = $gl->cell(0, 0); is($cell, undef, 'cell 0.0 is undefined');
                  is(scalar @{$gl->{V}->{lines}}, 1, '1 vertical lines');
                  is(scalar @{$gl->{H}->{lines}}, 4, '4 horizontal lines');
+                 is($line_h_C, $gl->line_y(3));
+                 throws_ok { $line_h_C->_next_track} qr{Cannot return next track. I am last line};
+ 
 my ($track_v_abc,
     $line_v_abc) = $gl->add_vertical_track();
                  isa_ok($track_v_abc, 'Grid::Layout::Track', '$track_v_abc is a Grid::Layout::Track');
